--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "node": "0.12.x"
   },
   "dependencies": {
+    "algorithmia": "^0.2.1",
+    "async": "^1.4.2",
     "body-parser": "^1.12.4",
     "cors": "^2.6.0",
     "debug": "^2.2.0",
     "express": "~4.12.4",
+    "html-to-text": "^1.3.2",
     "request": "~2.55.0",
     "rsvp": "^3.0.18"
   },
