--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "~4.12.4",
     "html-to-text": "^1.3.2",
     "request": "~2.55.0",
-    "rsvp": "^3.0.18"
+    "rsvp": "^3.0.18",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
