--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "html-to-text": "^1.3.2",
     "request": "~2.55.0",
     "rsvp": "^3.0.18",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "grunt": "^0.4.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
