--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "cors": "^2.6.0",
     "debug": "^2.2.0",
     "express": "~4.12.4",
+    "grunt": "^0.4.5",
     "html-to-text": "^1.3.2",
     "request": "~2.55.0",
     "rsvp": "^3.0.18",
-    "underscore": "^1.8.3",
-    "grunt": "^0.4.5"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
